# pytorch-human-pose

./: .gitignore  LICENSE  Makefile  README.md  RESEARCH.md  pyproject.toml  results.json
data/: README.md
experiments/classification/: hrnet_32.yaml  original_hrnet_32.yaml
experiments/keypoints/: higher_hrnet_32.yaml  higher_hrnet_32_mosaic.yaml
inference/: grouping.py  inference.py  model.py  process.py  visualization.py
mlflow/: .mlflow_env  run_mlflow.sh  test_experiment.py
notebooks/: README.md  Untitled.ipynb  cocoeval.ipynb
scripts/: prepare_coco.sh  prepare_dirs.sh  prepare_env.sh  prepare_environment.sh  prepare_imagenet.sh  run_mlflow.sh  save_coco_annots.py  set_gpu_powerlimit.sh
src/: config.py  test.py
src/base/: callbacks.py  config.py  datamodule.py  datasets.py  loss.py  lr_scheduler.py  meters.py  metrics.py  model.py  module.py  results.py  storage.py  trainer.py  transforms.py  visualization.py
src/base/architectures/: helpers.py
src/base/datasets/: __init__.py  base.py  video.py
src/base/transforms/: base.py  transforms.py  utils.py
src/callbacks/: __init__.py  base.py  checkpoint.py  dummy.py  keypoints.py  metrics.py  model_summary.py  onnx.py  segmentation.py
src/classification/: config.py  datamodule.py  datasets.py  loss.py  model.py  module.py  results.py  transforms.py  visualization.py
src/classification/architectures/: __init__.py  hrnet.py  original_hrnet.py
src/classification/datasets/: __init__.py  imagenet.py
src/data/: __init__.py  datamodule.py
src/data/datasets/: __init__.py  base.py  dummy.py  keypoints.py
src/data/transforms/: __init__.py  base.py  dummy.py  keypoints.py  segmentation.py  transforms.py
src/dummy/: callbacks.py  datamodule.py  datasets.py  loss.py  metrics.py  model.py  module.py  results.py  transforms.py  visualization.py
src/keypoints/: callbacks.py  config.py  datamodule.py  datasets.py  grouping.py  grouping_2.py  loss.py  metrics.py  model.py  module.py  ops.py  results.py  trainer.py  transforms.py  utils.py  visualization.py
src/keypoints/architectures/: __init__.py  higher_hrnet.py  hourglass.py  hrnet.py  hrnet2.py  original_higher_hrnet.py  simple_baseline.py
src/logger/: __init__.py  loggers.py  pylogger.py
src/logging/: __init__.py  loggers.py  pylogger.py
src/metrics/: __init__.py  confusionmatrix.py  results.py  storage.py
src/model/: load.py
src/utils/: __init__.py  config.py  files.py  image.py  model.py  ops.py  optim.py  types.py  utils.py  video.py
src/visualization/: __init__.py  dummy.py  keypoints.py  metrics.py  segmentation.py
(+43 files in other folders)
