[tool.poetry]
name = "human_pose"
version = "0.1.0"
description = ""
authors = ["thawro <tomaszhawro.kontakt@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
torch = { version = "2.0.1+cu118", source = "torchcu118" }
pre-commit = "^3.2.2"
black = "^23.3.0"
isort = "^5.12.0"
torchinfo = "^1.7.2"
torchvision = { version = "0.15.2", source = "torchcu118" }
rich = "^13.3.5"
matplotlib = "^3.7.1"
colorlog = "^6.7.0"
albumentations = "^1.3.1"
onnx = "1.13.1"
colored = "^1.4.4"
torchmetrics = "0.11.4"
mlflow = "^2.5.0"
tqdm = "^4.65.0"
jupyterlab = "^4.0.5"
ipywidgets = "^8.1.0"
ipykernel = "^6.25.1"
opencv-python = "^4.8.0.76"
kornia = "^0.7.0"
moviepy = "^1.0.3"
munkres = "^1.1.4"
joblib = "^1.3.2"
onnxruntime-gpu = "^1.16.3"
geda = "^0.1.15"
albumentations-experimental = "^0.0.1"
yacs = "^0.1.8"
dacite = "^1.8.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "torchcu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"
