[tool.poetry]
name = "human_pose"
version = "0.1.0"
description = ""
authors = ["thawro <tomaszhawro.kontakt@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
torch = { version = "2.2.1+cu121", source = "torchcu121" }
torchinfo = "^1.7.2"
torchvision = { version = "0.17.1", source = "torchcu121" }
rich = "^13.3.5"
matplotlib = "^3.7.1"
colorlog = "^6.7.0"
albumentations = "^1.3.1"
tqdm = "^4.65.0"
opencv-python = "^4.8.0.76"
kornia = "^0.7.0"
munkres = "^1.1.4"
joblib = "^1.3.2"
albumentations-experimental = "^0.0.1"
dacite = "^1.8.1"
thop = "^0.1.1.post2209072238"
pycocotools = "^2.0.7"
json-tricks = "^3.17.3"
plotly = "^5.19.0"
psutil = "^5.9.8"
pynvml = "^11.5.0"
seaborn = "^0.13.2"
gpustat = "^1.1.1"
natsort = "^8.4.0"
mlflow = "^2.11.2"
setuptools = "^69.2.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# [[tool.poetry.source]]
# name = "torchcu118"
# url = "https://download.pytorch.org/whl/cu118"
# priority = "explicit"

[[tool.poetry.source]]
name = "torchcu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.ruff.per-file-ignores]
"*" = ["F401"]

[tool.ruff]
indent-width = 4
line-length = 100
